--- a/src/style.css
+++ b/src/style.css
@@ -384,6 +384,22 @@ body {
     margin-top: auto;
 }
 
+.gh-link:hover .mini-github-icon {
+    fill: #7FDBFF
+}
+
+.gh-link:hover > .link {
+    color: #7FDBFF
+}
+
+.gh-link-alt:hover .mini-github-icon {
+    fill: #7FDBFF
+}
+
+.gh-link-alt:hover > .link {
+    color: #7FDBFF
+}
+
 .links-container-alt {
     align-self: flex-start;
     display: flex;
@@ -510,11 +526,13 @@ body {
     justify-content: space-evenly;
 }
 
-.footer-contact-container {
+.linkedin-container {
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-top: 30px;
+}
+
+.linkedin-container:hover > .linkedin-text {
+    color: rgb(48, 118, 176)
 }
 
 .linkedin-text {
@@ -527,10 +545,23 @@ body {
     color: rgb(48, 118, 176)
 }
 
+.github-container {
+    display: flex;
+    align-items: center;
+}
+
+.github-container:hover > .github-text {
+    color: #3D9970
+}
+
 .footer-github-icon {
     width: 60px;
     fill: whitesmoke;
     margin-left: -10px;
+}
+
+.github-container:hover .footer-github-icon {
+    fill: #3D9970;
 }
 
 .footer-github-icon:hover {
@@ -542,8 +573,13 @@ body {
     text-decoration: none;
 }
 
-.github-text:hover {
-    color: #3D9970
+.mail-container {
+    display: flex;
+    align-items: center;
+}
+
+.mail-container:hover > .mailto-text {
+    color: rgb(189, 151, 102)
 }
 
 .mailto-text {
@@ -552,8 +588,17 @@ body {
     margin-left: 9px;
 }
 
-.mailto-text:hover {
-    color: rgb(189, 151, 102)
+.phone-container {
+    display: flex;
+    align-items: center;
+}
+
+.phone-container:hover > .phone-icon {
+    color: #7FDBFF
+}
+
+.phone-container:hover > .phone-text {
+    color: #7FDBFF
 }
 
 .phone-icon {
@@ -561,10 +606,6 @@ body {
     margin-top: -6px;
     text-decoration: none;
     color: whitesmoke
-}
-
-.phone-icon:hover {
-    color: #7FDBFF
 }
 
 .phone-text {
@@ -686,6 +727,19 @@ body {
         flex-direction: column;
         align-items: flex-start;
         width: 260px;
+        margin-top: 30px;
+    }
+
+    .linkedin-container {
+        margin-bottom: 10px;
+    }
+
+    .github-container {
+        margin-bottom: 10px;
+    }
+
+    .mail-container {
+        margin-bottom: 10px;
     }
 }
 
